Prevent header height from growing too long

--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ button[type=button] {
 
 #main {
     display: grid;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: min(150px, 1fr) 5fr;
 }
 
 #header {
